--- a/src/GameEditor/GameCore.WcfService/Web.config
+++ b/src/GameEditor/GameCore.WcfService/Web.config
@@ -42,5 +42,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-  <add name="DbmGame" connectionString="data source=STEPHENOLAH\SQLEXPRESS;initial catalog=DbmGame;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+  <add name="DbmGame" connectionString="data source=STEPHENOLAH\SQLEXPRESS;initial catalog=DbmGame;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" /><add name="DbmGameEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=STEPHENOLAH\SQLEXPRESS;initial catalog=DbmGame;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
