- Made changes to the combo box in allied view to bind better - Fixed bug in ArmyUnitDetailPresenter where item returns null - Ensured that when a new army is selected, current ally is set to 0 - Fixed bug in AllyListPresenter where current army was set to 0 - Added Unit tests for presenters

--- a/src/GameEditor/GameEditor.Wcf.Harness/GameEditor.Wcf.Harness.csproj
+++ b/src/GameEditor/GameEditor.Wcf.Harness/GameEditor.Wcf.Harness.csproj
@@ -19,7 +19,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;DESIGNMODE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;DESIGNMODEX</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -258,7 +258,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
