--- a/src/GameEditor/GameCore.WcfService/GameCore.WcfService.csproj
+++ b/src/GameEditor/GameCore.WcfService/GameCore.WcfService.csproj
@@ -78,12 +78,20 @@
     <Compile Include="DebellisMultitudinis\IDbmModel.cs" />
     <Compile Include="Exceptions\PrimaryKeyViolationException.cs" />
     <Compile Include="Exceptions\RecordNotFoundException.cs" />
-    <Compile Include="Helpers\ArmyDefinitionExtension.cs" />
+    <Compile Include="DebellisMultitudinis\ArmyDefinitionExtension.cs" />
     <Compile Include="Helpers\AlliedArmyDefinitionExtension.cs" />
     <Compile Include="Helpers\ArmyUnitDefinitionExtension.cs" />
     <Compile Include="Migrations\201606210645450_AlliedArmyList.cs" />
     <Compile Include="Migrations\201606210645450_AlliedArmyList.Designer.cs">
       <DependentUpon>201606210645450_AlliedArmyList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606270605223_AlliedArmyList_2.cs" />
+    <Compile Include="Migrations\201606270605223_AlliedArmyList_2.Designer.cs">
+      <DependentUpon>201606270605223_AlliedArmyList_2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606270706286_AlliedArmyList_3.cs" />
+    <Compile Include="Migrations\201606270706286_AlliedArmyList_3.Designer.cs">
+      <DependentUpon>201606270706286_AlliedArmyList_3.cs</DependentUpon>
     </Compile>
     <Compile Include="WarGameService.svc.cs">
       <DependentUpon>WarGameService.svc</DependentUpon>
@@ -176,6 +184,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201606210645450_AlliedArmyList.resx">
       <DependentUpon>201606210645450_AlliedArmyList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606270605223_AlliedArmyList_2.resx">
+      <DependentUpon>201606270605223_AlliedArmyList_2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606270706286_AlliedArmyList_3.resx">
+      <DependentUpon>201606270706286_AlliedArmyList_3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
