--- a/src/GameEditor/GameEditor.Wcf.Harness.UnitTest/GameEditor.Wcf.Harness.UnitTest.csproj
+++ b/src/GameEditor/GameEditor.Wcf.Harness.UnitTest/GameEditor.Wcf.Harness.UnitTest.csproj
@@ -41,6 +41,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -58,6 +59,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Presenters\AllyListPresenterTest.cs" />
+    <Compile Include="Presenters\ArmyDetailPresenterTest.cs" />
     <Compile Include="Presenters\ArmyUnitListPresenterTest.cs" />
     <Compile Include="Presenters\ArmyListPresenterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
