- Fixed the date filter for Allied lists

--- a/src/GameEditor/GameEditor.Wcf.Harness.UnitTest/GameEditor.Wcf.Harness.UnitTest.csproj
+++ b/src/GameEditor/GameEditor.Wcf.Harness.UnitTest/GameEditor.Wcf.Harness.UnitTest.csproj
@@ -58,6 +58,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Logic\LogicTest.cs" />
     <Compile Include="Presenters\AllyListPresenterTest.cs" />
     <Compile Include="Presenters\ArmyDetailPresenterTest.cs" />
     <Compile Include="Presenters\ArmyUnitListPresenterTest.cs" />
