- Updated Alternative Units to that multiple alternatives can be attached to a given unit

--- a/src/GameEditor/GameCore.WcfService/GameCore.WcfService.csproj
+++ b/src/GameEditor/GameCore.WcfService/GameCore.WcfService.csproj
@@ -104,6 +104,10 @@
     <Compile Include="Migrations\201607031411301_AlternativeUnits.Designer.cs">
       <DependentUpon>201607031411301_AlternativeUnits.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201607040625580_AlternativeUnits1.cs" />
+    <Compile Include="Migrations\201607040625580_AlternativeUnits1.Designer.cs">
+      <DependentUpon>201607040625580_AlternativeUnits1.cs</DependentUpon>
+    </Compile>
     <Compile Include="WarGameService.svc.cs">
       <DependentUpon>WarGameService.svc</DependentUpon>
     </Compile>
@@ -206,6 +210,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201607031411301_AlternativeUnits.resx">
       <DependentUpon>201607031411301_AlternativeUnits.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607040625580_AlternativeUnits1.resx">
+      <DependentUpon>201607040625580_AlternativeUnits1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
