--- a/src/GameEditor/GameEditor.Wcf.Harness/GameEditor.Wcf.Harness.csproj
+++ b/src/GameEditor/GameEditor.Wcf.Harness/GameEditor.Wcf.Harness.csproj
@@ -89,6 +89,7 @@
       <DependentUpon>ArmyListViewControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Presenters\AlternativeUnitDetailPresenter.cs" />
+    <Compile Include="Presenters\AlternativeUnitListPresenter.cs" />
     <Compile Include="Presenters\ArmyAllyListPresenter.cs" />
     <Compile Include="Presenters\AllyListPresenter.cs" />
     <Compile Include="Presenters\ArmyUnitDetailPresenter.cs" />
@@ -96,6 +97,7 @@
     <Compile Include="Presenters\ArmyUnitListPresenter.cs" />
     <Compile Include="Presenters\ArmyListPresenter.cs" />
     <Compile Include="Presenters\IAlternativeUnitDetailPresenter.cs" />
+    <Compile Include="Presenters\IAlternativeUnitListPresenter.cs" />
     <Compile Include="Presenters\IArmyAllyListPresenter.cs" />
     <Compile Include="Presenters\IAllyListPresenter.cs" />
     <Compile Include="Presenters\IArmyUnitDetailPresenter.cs" />
@@ -146,6 +148,7 @@
     </Compile>
     <Compile Include="Views\IAllyListView.cs" />
     <Compile Include="Views\IAlternativeUnitDetailView.cs" />
+    <Compile Include="Views\IAlternativeUnitListView.cs" />
     <Compile Include="Views\IArmyUnitDetailView.cs" />
     <Compile Include="Views\IArmyDetailView.cs" />
     <Compile Include="Views\IArmyAllyListView.cs" />
