--- a/src/GameEditor/GameEditor.Wcf.Harness.Wpf/app.config
+++ b/src/GameEditor/GameEditor.Wcf.Harness.Wpf/app.config
@@ -1,15 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup><system.serviceModel>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" /></startup><system.serviceModel>
         <bindings>
             <basicHttpBinding>
                 <binding name="BasicHttpBinding_IWarGameService" />
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:52965/WarGameService.svc"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IWarGameService"
-                contract="WarGameServiceReference.IWarGameService" name="BasicHttpBinding_IWarGameService" />
+            <endpoint address="http://localhost:52965/WarGameService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IWarGameService" contract="WarGameServiceReference.IWarGameService" name="BasicHttpBinding_IWarGameService" />
         </client>
     </system.serviceModel>
+  <appSettings>
+    <add key="LabelWidth" value="50" />
+  </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Caliburn.Micro" publicKeyToken="8e5891231f2ed21f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
