--- a/src/GameEditor/GameEditor.Wcf.Harness.Wpf/GameEditor.Wcf.Harness.Wpf.csproj
+++ b/src/GameEditor/GameEditor.Wcf.Harness.Wpf/GameEditor.Wcf.Harness.Wpf.csproj
@@ -91,6 +91,7 @@
     <Compile Include="AppBootstrapper.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="EventAggregators\CheckDirtyStatus.cs" />
+    <Compile Include="EventAggregators\UpdateList.cs" />
     <Compile Include="EventAggregators\UpdateView.cs" />
     <Compile Include="Extensions\StringExtender.cs" />
     <Compile Include="Helpers\EnumHelper.cs" />
