- Refactored to include ListViewModel as a base class which handles the perculiarities required to ensure lists are properly updated when modified dynamically

--- a/src/GameEditor/GameEditor.Wcf.Harness.Wpf/GameEditor.Wcf.Harness.Wpf.csproj
+++ b/src/GameEditor/GameEditor.Wcf.Harness.Wpf/GameEditor.Wcf.Harness.Wpf.csproj
@@ -112,6 +112,7 @@
     <Compile Include="ViewModels\ArmyListViewModel.cs" />
     <Compile Include="ViewModels\ArmyUnitDetailViewModel.cs" />
     <Compile Include="ViewModels\ArmyUnitListViewModel.cs" />
+    <Compile Include="ViewModels\Base\ListViewModel.cs" />
     <Compile Include="ViewModels\LabelCheckboxViewModel.cs" />
     <Compile Include="ViewModels\LabelComboboxViewModel.cs" />
     <Compile Include="ViewModels\LabelTextboxViewModel.cs" />
